fixed the path error. aligned the buttons. fixed the odd styling of dependent members

--- a/src/app/claimant-form/claimant-form.component.css
+++ b/src/app/claimant-form/claimant-form.component.css
@@ -19,15 +19,7 @@ h1 {
 }
 
 .btn {
-  margin-top: 10px;
-}
-
-.remove {
-  background-color: white;
-  border-color: white;
-  margin: none;
-  border: none;
-  box-shadow: white;
+  margin-top: 30px;
 }
 
 .remove-icon {
